warning message bank account

--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -377,6 +377,10 @@
                                             } }}">
                                         </span>
                                     </div>
+
+                                    <div fxFlex="100" *ngIf="!isLoadingHyperwallet" class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="center center">
+                                        <p class="warning-message" innerHtml="{{ 'CFAR_EXERCISE_FLOW.BANK_ACCOUNT_INFO' | translate }}"></p>
+                                    </div>
             
                                     <div fxFlex="100">
                                         <div id="TransferMethodUI"><!-- INJECTED CONTENT --></div>
