improve hyperwallet ui

--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -378,8 +378,8 @@
                                         </span>
                                     </div>
 
-                                    <div fxFlex="100" *ngIf="!isLoadingHyperwallet" class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="center center">
-                                        <p class="warning-message" innerHtml="{{ 'CFAR_EXERCISE_FLOW.BANK_ACCOUNT_INFO' | translate }}"></p>
+                                    <div fxFlex="100" *ngIf="!isLoadingHyperwallet" fxLayout="row" fxLayoutAlign="start center">
+                                        <p innerHtml="{{ 'CFAR_EXERCISE_FLOW.BANK_ACCOUNT_INFO' | translate }}"></p>
                                     </div>
             
                                     <div fxFlex="100">
