--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -123,14 +123,6 @@
                 color: black;
             }
 
-            .warning-message {
-                background: rgb(255 200 115 / 25%);
-                padding: 16px;
-                color: #ffa000;
-                border: 1px solid #ffa000;
-                margin: 16px;
-            }
-
             .information-message {
                 width: 100%;
                 text-align: center;
@@ -186,6 +178,10 @@
                         color: map-get($warn-palette, default);
                     }
                 }
+            }
+
+            .hw-custom-transfermethodtype-items {
+                width: 100%;
             }
 
             .hw-global-errors {
