--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -16,6 +16,7 @@
                     [hCSessionId]="hCSessionId"
                     [exerciseId]="exerciseId"
                     [hyperwalletUrl]="hyperwalletUrl"
+                    [contactFormUrl]="contactFormUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
                     (flowCompleted)="onFlowCompleted($event)"
                     (errorOccurred)="onErrorOccurred($event)"
