--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -180,13 +180,13 @@
                 }
             }
 
-            .hw-widget-selection-step-tmc-selection-form {
+            #hw-widget-selection-step-tmc-selection-form {
                 .hw-group-with-template {
                     // Hide useless block
                     display: none;
                 }
             }
-
+            
             .hw-custom-transfermethodtype-items {
                 width: 100%;
             }
