RW36849 : reduce extra space

--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -15,7 +15,7 @@
                     <h2 class="offer-title px-16 m-0">{{ 'CFAR_OFFER_BANNER_LARGE.TITLE' | translate }}</h2>
                 </div>
 
-                <div class="mb-32 mt-16" fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
+                <div class="my-8" fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
     
                     <div fxFlex="calc(20% - 16px)" fxFlex.lt-md="calc(30% - 16px)" fxHide.lt-sm fxLayout="row" fxLayoutAlign="center center" class="p-16" ngClass.lt-sm="px-0">
                         <img class="responsive-image" src="{{ imageBasePath || '' }}assets/offer-banner-icon.svg">
