--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -40,9 +40,23 @@
 
             <div class="px-32" ngClass.lt-md="px-16" fxLayout="column" fxLayoutAlign="center center">
         
-                <mat-card class="full-width m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
+                <mat-card attr.aria-label="
+                {{ 'COMMON.COVERAGE_PERCENTAGE_ACCESSIBILITY' | translate: 
+                    { 
+                        coverage: (offer.coveragePercentage | number: '1.0-0'),
+                        price: (getPricePerTraveler(offer) | currency:offer?.currency:'symbol':undefined:currentLang)
+                    }
+                }}
+                " class="full-width m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
                     [ngClass]="{ 'active': offer == selectedCfarOffer }">
-                    <div fxFlex="100"  fxLayout="row wrap" fxLayoutAlign="start center" (click)="onSelectOffer(offer)">
+                    <div fxFlex="100" attr.aria-label="
+                    {{ 'COMMON.COVERAGE_PERCENTAGE_ACCESSIBILITY' | translate: 
+                        { 
+                            coverage: (offer.coveragePercentage | number: '1.0-0'),
+                            price: (getPricePerTraveler(offer) | currency:offer?.currency:'symbol':undefined:currentLang)
+                        }
+                    }}
+                    " fxLayout="row wrap" fxLayoutAlign="start center" (click)="onSelectOffer(offer)">
                         <h3 fxFlex="100" class="offer-title" 
                             attr.aria-label="
                             {{ 'COMMON.COVERAGE_PERCENTAGE_ACCESSIBILITY' | translate: 
