--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -222,8 +222,7 @@
                                     <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
                                         <p *ngIf="isHopperRefund">
                                             {{ 'CFAR_EXERCISE_FLOW.REFUND_DETAILS' | translate: {
-                                                amount: cfarExercise.hopperRefund | currency:cfarExercise.hopperRefundCurrency:'symbol':undefined:currentLang,
-                                                method: cfarExercise.hopperRefundMethod
+                                                amount: cfarExercise.hopperRefund | currency:cfarExercise.hopperRefundCurrency:'symbol':undefined:currentLang
                                             } }}
                                         </p>
                     
