--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -63,7 +63,7 @@
                                     }}
                                 </mat-radio-button>
 
-                                <div class="mt-8" fxFlex="100" fxLayoutAlign="start center" fxLayoutGap="8px"
+                                <div class="mt-8 mr-16" fxFlex="100" fxLayoutAlign="start center" fxLayoutGap="8px"
                                     attr.aria-label="{{ 'COMMON.PRICE_PER_TRAVELER' | translate: 
                                         { price: (getPricePerTraveler(offer) | currency:offer?.currency:'symbol':undefined:currentLang) }
                                     }}"
@@ -72,7 +72,7 @@
                                     }}"
                                 ></div>
 
-                                <div class="mt-8 incl-taxes" fxFlex="100" fxLayoutAlign="start center"
+                                <div class="mt-8 mr-16 incl-taxes" fxFlex="100" fxLayoutAlign="start center"
                                     attr.aria-label="{{ 'COMMON.INCL_TAXES' | translate }}">
                                     {{ 'COMMON.INCL_TAXES' | translate }}
                                 </div>
