--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -59,6 +59,7 @@
                 font-size: 20px;
                 font-family: "Open Sans", Arial;
                 font-weight: 600;
+                line-height: 20px;
             }
 
             .default-choice {
