--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -47,6 +47,7 @@
             .provided-by-image {
                 margin-top: 1rem;
                 height: 2rem;
+                position: relative;
             }
 
             .check-icon {
