--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -45,6 +45,7 @@
                 .provided-by-image {
                     margin-top: 1rem;
                     height: 2rem;
+                    position: relative;
                 }
             }
         }
