--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -25,11 +25,10 @@
         
                 <div fxFlex="100" class="py-8" *ngFor="let desc of getOfferDescription(selectedCfarOffer)" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
                     <mat-icon class="check-icon">check</mat-icon>
-                    <span attr.aria-label="{{ desc }}" innerHtml="{{ desc }}"></span>
+                    <span class="text-justify" attr.aria-label="{{ desc }}" innerHtml="{{ desc }}"></span>
                 </div>
 
                 <div fxFlex="100" class="py-8" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutGap="8px" (click)="onOpenTermsAndConditions()">
-                    <span>{{ 'CFAR_OFFER_DIALOG.TERMS_WARNING' | translate }}</span>
                     <a href="{{selectedCfarOffer.termsConditionsUrl}}" attr.aria-describedby="{{ 'COMMON.TERMS_LINK_TEXT' | translate }}" 
                         target="_blank">
                         {{ 'COMMON.TERMS_LINK_TEXT' | translate }}
@@ -47,7 +46,7 @@
                         price: (getPricePerTraveler(offer) | currency:offer?.currency:'symbol':undefined:currentLang)
                     }
                 }}
-                " class="full-width m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
+                " class="full-width m-16 mat-elevation-z4" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
                     [ngClass]="{ 'active': offer == selectedCfarOffer }">
                     <div fxFlex="100" attr.aria-label="
                     {{ 'COMMON.COVERAGE_PERCENTAGE_ACCESSIBILITY' | translate: 
@@ -111,8 +110,7 @@
 
 <mat-dialog-actions>
 
-    <div class="p-32" *ngIf="!isLoading" ngClass.lt-md="px-16" 
-        fxFlex="100" fxLayout="row wrap" fxLayoutGap="16px" fxLayout.lt-sm="column" fxLayoutAlign="center center">
+    <div class="p-16" *ngIf="!isLoading" fxFlex="100" fxLayout="row wrap" fxLayoutGap="16px" fxLayout.lt-sm="column" fxLayoutAlign="center center">
         <button mat-raised-button ngClass.lt-sm="full-width" (click)="onClose()"
             attr.aria-label="{{ 'CFAR_OFFER_DIALOG.BUTTON.CANCEL' | translate }}">
             {{ 'CFAR_OFFER_DIALOG.BUTTON.CANCEL' | translate }}
