--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -29,7 +29,7 @@
                     </ng-container>
 
                     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" (click)="onOpenTermsAndConditions()">
-                        <a href="{{selectedCfarOffer.termsConditionsUrl}}" attr.aria-describedby="{{ 'COMMON.TERMS_LINK_TEXT' | translate }}" target="_blank">
+                        <a href="{{getTCsUrl(selectedCfarOffer)}}" attr.aria-describedby="{{ 'COMMON.TERMS_LINK_TEXT' | translate }}" target="_blank">
                             {{ 'COMMON.TERMS_LINK_TEXT' | translate }}
                         </a>
                     </div>
