--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div fxFlex="100" class="provided-by-container">
-        <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper.svg" />
+        <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper/{{ currentLang || 'en' }}.svg" />
     </div>
 
 </div>
