--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="app-container" fxLayout="column" fxLayoutAlign="start stretch">
-  <app-navbar fxFlex="64px" class="mat-elevation-z6"></app-navbar>
+<div class="app-container" fxLayout="row" fxLayoutAlign="start center">
   <router-outlet></router-outlet>
 </div>
