--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -1,4 +1,6 @@
-<div class="cfar-offer-banner-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
+<div class="cfar-offer-banner-page-container" 
+    ngClass.gt-sm="p-32" ngClass.lt-md="p-16" ngClass.lt-sm="p-8"
+    fxLayout="row wrap" fxLayoutAlign="start start">
 
     <p fxFlex="100">This banner can be integrated in your booking funnel in order to display CFAR offers to the User. CFAR offers will be created dynamically, including a description in the page’s language and a starting price.
         Following a click of the User on the 'Select' button, the CFAR Dialog will open.</p>
