--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,19 +1,59 @@
-<div class="layout-container" fxLayout="row" fxLayoutAlign="stretch center">
+<div class="layout-container">
     
-    <div fxFlex="20" fxFill class="aside">
+    <mat-toolbar class="toolbar-container mat-elevation-z4" color="primary" fxLayout="row" fxLayoutAlign="space-between center">
+        <div fxLayout="row" fxLayoutAlign="start center">
+            <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    
+            <span fxHide.lt-md routerLink="/guides/{{ currentPartnerId }}" class="pointer">Hopper Cloud Airlines - Angular SDK - {{ version }}</span>
+            <span fxHide.gt-sm routerLink="/guides/{{ currentPartnerId }}" class="pointer">{{ version }}</span>
+        </div>
+    
+        <div fxLayout="row" fxLayoutAlign="end center">
+            <button mat-button [matMenuTriggerFor]="themeMenu" aria-label="Open Menu">
+                <mat-icon class="mr-8">palette</mat-icon>
+                <span fxHide.lt-md>{{ currentTheme }}</span>
+            </button>
+    
+            <mat-menu #themeMenu="matMenu">
+                <button mat-menu-item *ngFor="let theme of themes" attr.aria-label="Apply {{ theme }} theme" (click)="onSetTheme(theme)">
+                    <mat-icon>palette</mat-icon>
+                    <span>{{ theme }}</span>
+                </button>
+            </mat-menu>
+    
+            <button mat-button [matMenuTriggerFor]="languageMenu" ariaLabel="Language Selection">
+                <mat-icon class="mr-8" svgIcon="flag_{{ currentLang }}"></mat-icon>
+                <span>{{ currentLang | uppercase }}</span>
+            </button>
+    
+            <mat-menu #languageMenu="matMenu">
+                <button mat-menu-item *ngFor="let language of languages" (click)="onSetLanguage(language)"
+                    attr.aria-label="Set the current language to {{ language }}">
+                    <mat-icon svgIcon="flag_{{ language }}"></mat-icon>
+                    <span>{{ language | uppercase }}</span>
+                </button>
+            </mat-menu>
+        </div>
+    </mat-toolbar>
 
-        <mat-selection-list #componentsList [multiple]="false">
-            <mat-list-option *ngFor="let component of components;" [routerLink]="component?.link"
-                [selected]="selectedPath === component?.link">
-                {{ component?.name }}
-            </mat-list-option>
-        </mat-selection-list>
+    <mat-sidenav-container class="sidenav-container">
+        <mat-sidenav #snav [mode]="mode" [opened]="isOpened">
+            <mat-nav-list>
+                <mat-selection-list #componentsList [multiple]="false">
+                    <mat-list-option *ngFor="let component of components;" [routerLink]="component?.link"
+                        [selected]="selectedPath === component?.link" (click)="mode === 'over' && snav.toggle()">
+                        {{ component?.name }}
+                    </mat-list-option>
+                </mat-selection-list>
+            </mat-nav-list>
+        </mat-sidenav>
 
-    </div>
+        <mat-sidenav-content id="scroll-anchor">
+            <div class="content">
+                <router-outlet (activate)="onScrollToTop($event)"></router-outlet>
+            </div>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 
-    <div fxFlex="80" fxFill class="content" id="scroll-anchor">
-
-        <router-outlet (activate)="onScrollToTop($event)"></router-outlet>
-
-    </div>
+    
 </div>
