--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -55,6 +55,7 @@
                                     }
                                 }}
                                 "
+                                [disabled]="isLoadingContract"
                             >
                                 {{ 'COMMON.COVERAGE_PERCENTAGE' | translate: 
                                     { coverage: (offer.coveragePercentage | number: '1.0-0') }
